# sci_computing

./: .gitignore  pyproject.toml
miniproject/: mandelbrot.ipynb  mandelbrot_set.py  naiveMandelbrot.py  vectorMandelbrot.py
miniproject/part1/: mandelbrot_part1.ipynb  naiveMandelbrot.py
miniproject/part2/: multiprocessing_mandelbrot.ipynb  strato_dask_mandelbrot.py
miniproject/part3/: mandelbrot_gpu.ipynb  mandelbrot_opencl.py  test_mandelbrot_opencl.py
notebooks/: Lecture2.ipynb  Lecture3.ipynb  Lecture5.ipynb  Lecture6.ipynb  calculate_pi.py  lecture1.ipynb
