[project]
name = "sci-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "tk>=0.1.0",
    "tqdm>=4.67.1",
]
