[project]
name = "sci-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.0",
    "dask>=2025.2.0",
    "distributed>=2025.2.0",
    "graphviz>=0.20.3",
    "h5py>=3.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numba==0.61.0",
    "numpy==2.1",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "tk>=0.1.0",
    "tqdm>=4.67.1",
]
